# data-engineering-exp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  notebook.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  lint.yml
data_engineering_exp/: cli.py
data_engineering_exp/core/: catalog.py  deduplication.py  initializer.py  io.py
data_engineering_exp/spark/: scd2.py
data_engineering_exp/spark_core/: scd2.py
docs/: getting-started.md  index.md
flint_core/: __init__.py  cli.py
flint_core/core/: base.py  catalog.py  deduplication.py  exceptions.py  initializer.py  io.py
flint_core/core/catalog/: __init__.py  adapters.py  descriptors.py  engine.py  models.py
flint_core/functions/: __init__.py  deduplication.py  scd2.py
flint_core/pandas_core/: __init__.py  deduplication.py  engine.py  scd2.py
flint_core/spark_core/: __init__.py  deduplication.py  engine.py  scd2.py
tests/: conftest.py  test_base.py  test_scd2.py
tests/core_tests/: deduplication.py  test_catalog.py  test_cli.py  test_deduplication.py  test_initializer.py  test_io.py  test_scd2.py
tests/pandas_test/: test_scd2.py
tests/sc2_test/: test_scd2_insert.py  test_scd2_unchanged.py  test_scd2_update.py
tests/spark_test/: test_scd2.py
