[tool.poetry]
name = "data-engineering-exp"
version = "0.1.0"
description = "Common data engineering utilities for Spark and Pandas"
authors = ["idperez720 <ivandavidperez4@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.0"
pyspark = "^4.0.0"
pyyaml = "^6.0.2"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
flake8 = "^7.2.0"
jupyter = "^1.1.1"
pre-commit = "^4.2.0"
ruff = "^0.11.13"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["tests/data", "build", "dist"]
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]  # line too long (already handled by black)

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
