[project]
name = "data-engineering-exp"
version = "0.1.0"
description = "Common data engineering utilities for improved development experience"
authors = [
    {name = "idperez720",email = "ivandavidperez4@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "pyspark (>=4.1.2,<5.0.0)",
    "pandas (>=3.0.3,<4.0.0)"
]

[tool.poetry]
packages = [{ include = "data_engineering_exp" }]


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.18"
black = "^26.5.1"
pylint = "^4.0.6"
pytest = "^9.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["migrations", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["business", "core", "interfaces", "integrations"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "no-member",
    "unused-argument",
    "fixme",
    "broad-exception-caught",
    "unnecessary-pass",
    "too-few-public-methods",
    "line-too-long",
    "too-many-arguments",
    "too-many-locals",
    "too-many-positional-arguments",
    "duplicate-code",
]

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests as critical smoke tests",
]
testpaths = ["tests"]
pythonpath = ["."]